fix: tab items aligned with space between

--- a/css/tabBar.css
+++ b/css/tabBar.css
@@ -60,7 +60,6 @@ body.is-edit-mode #toolbar-navigation-buttons {
   padding-left: 0.4rem;
 }
 #forward-button {
-  margin-left: -0.75em;
 }
 #back-button:disabled,
 #forward-button:disabled {
@@ -109,11 +108,9 @@ body.linux #menu-button {
   overflow: hidden;
   word-break: break-all;
   position: relative;
-  padding: 0 0.8em;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
-  gap: 0.25rem;
 }
 .tab-item.gu-mirror {
   top: var(--control-space-top) !important;
@@ -159,7 +156,6 @@ body.linux #menu-button {
 /* icons */
 
 .tab-item .tab-icon-area {
-  margin-right: -0.7em;
   display: flex;
   align-items: center;
   order: 1;
@@ -167,7 +163,7 @@ body.linux #menu-button {
 .tab-item .tab-icon {
   position: relative;
   font-size: 0.875em;
-  padding: 0.7125em 0.5em;
+  padding: 0 0.5rem;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
@@ -219,6 +215,8 @@ body.linux #menu-button {
 }
 .tab-item .title {
   font-size: 15px;
+  margin-left: 0.5rem;
+  margin-right: auto;
 }
 
 /* buttons */
@@ -254,7 +252,7 @@ body.windows.dark-theme .navbar-action-button:not(:disabled):hover {
 /* audio button */
 .tab-item .tab-audio-button {
   vertical-align: text-bottom;
-  padding: 0 0.5em 0 0;
+  padding: 0 0.5em;
   font-size: 1.1em !important;
 }
 
@@ -263,8 +261,6 @@ body.windows.dark-theme .navbar-action-button:not(:disabled):hover {
 .tab-item .reader-button {
   display: none;
   vertical-align: text-bottom;
-  padding: 0 0.45em;
-  margin-left: -0.7em;
   font-size: 1.1em !important;
   order: -1;
 }
@@ -279,10 +275,10 @@ body.windows.dark-theme .navbar-action-button:not(:disabled):hover {
 
 .tab-item .tab-icon.permission-request-icon {
   border: 1px rgba(0, 0, 0, 0.3) solid;
-  padding: 0.15em 0.17em;
-  border-radius: 0.75em;
-  height: 80%;
-  margin: auto 0;
+  border-radius: 50%;
+  height: 70%;
+  aspect-ratio: 1 / 1;
+  margin: auto 0.5rem;
   order: -1;
 }
 .tab-item .tab-icon.permission-request-icon .i {
@@ -316,7 +312,6 @@ body.windows.dark-theme .navbar-action-button:not(:disabled):hover {
 /* in Carbon, close icon is a bit smaller than other icons, enlarge it in order to match with other icons */
 .tab-item .tab-close-button {
   font-size: 1.25em;
-  padding: 0.3em 0.45em;
   box-sizing: border-box;
 }
 .tab-item .tab-close-button:hover:after {
